sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:5: error: not found: value imin
      {imin=iMin(i,n-1);
       ^AlgSelectionSort:6: error: not found: value imin
       echange(i,imin)
                 ^